# place-test

./: .gitignore  README.md  docker-compose.yaml
auth/: Dockerfile  auth.go  go.mod  go.sum  main.go  models.go  routes.go
backend/: Cargo.toml  Dockerfile  go.mod  go.sum  go.work  go.work.sum  grid_holder.go  handlers.go  main.go
backend/.fleet/: run.json
backend/auth/: auth.go  go.mod  go.sum  jwt.go  main.go  provider.go  routes.go
backend/auth/provider/: github.go  google.go
backend/draw/: go.mod  grid_holder.go  handlers.go  main.go
backend/grid/: go.mod  go.sum  main.go  main_test.go  service.go
backend/internal/kafka_load/: go.sum  main.go
backend/internal/protocol/: cell.go  cell_test.go
backend/internal/utils/: main.go
backend/logging/: gin.go  log.go
backend/main/: main.go
backend/main/auth/: main.go
backend/main/draw/: main.go
backend/main/grid/: main.go
backend/main/ws/: main.go
backend/server/: go.mod  server.go
backend/src/: holder.rs  main.rs  websocket.rs
backend/web/: go.mod  server.go  server_test.go
backend/ws/: cache.go  cache_test.go  clients.go  clients_test.go  go.mod  go.sum  main.go  worker.go  worker_test.go
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  requirements.txt
grid/: Dockerfile  go.mod  go.sum  main.go
nginx/: nginx.conf
project/: Dockerfile  db.sqlite3  requirements.txt
websocket_service/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
websocket_service/src/: config.rs  error.rs  main.rs
websocket_service/src/handlers/: grid.rs  kafka.rs  mod.rs  websocket.rs
(+90 files in other folders)
