[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
actix-web = "4"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
bitfield = "0.16.1"
bytestring = "1.0"
actix-ws = "0.3.0"
actix-rt = "2"
futures-util = "0.3.30"
tokio = "1.39.2"
env_logger = "0.11.5"
rand = "0.8.5"
bincode = "1.3.3"
bytes = "1.7.1"
redis = { version = "0.26.1", features = ["aio", "tokio-comp"] }
deadpool-redis = "0.16.0"