[package]
name = "websocket_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
rdkafka = "0.36.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0" , features = ["v4"] }
thiserror = "1.0.63"
tracing = "0.1.40"
async-trait = "0.1.82"
tokio-stream = "0.1.14"